# f1-data-updater

./: .gitignore  Dockerfile  main.py
.github/workflows/: main.yml
converter/: main.py  requirements.txt
converter/parser/: parse_constructor_championship.py  parse_driver_championship.py  parse_quali.py  parse_race_classification.py  parse_race_history_chart.py  parse_race_lap_chart.py  parse_race_pit_stops.py
updater/: Cargo.toml
updater/src/: main.rs  models.rs  tables.rs
