[package]
name = "updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-query = { version = "0.30.7", default-features = false, features = [
    "backend-mysql",
    "derive",
] }
anyhow = "1.0.86"
mysql = "25.0.1"
chrono = "0.4.38"
